[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memfrag"
version = "0.1.0"
description = "Fragmented memory layer for AI assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
memfrag = "memfrag.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
